Fix cut off picture captions

--- a/docs/css/background.css
+++ b/docs/css/background.css
@@ -164,6 +164,7 @@ body.homepage {
 
 .unterzeile {
   height: 4em;
+  font-size: 0.8em;
 }
 
 .modal .modal-content {
